--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <h2>Connect with Me</h2>
 
         <a href="https://github.com/Mark-Mikelonis"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/mark-mikelonis-bb18215/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="ww.linkedin.com/in/mark-mikelonis/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/5075208/thricethree"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
@@ -59,7 +59,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Mark Mikelonis
+      Copyright &copy; 2018 Mark Mikelonis
     </div>
   </footer>
 </body>
