--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
       <img src="assets/images/cat.jpg" class="auth-image" alt="Mark Mikelonis">
 
-      <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
-
-      <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
+<p>Well adjusted computer geek, with a passion for software development, currently seeking full time or contract opportunities in the San Francisco Bay Area. Writing software is really rewarding for me. I enjoy solving problems and being able to develop rational solutions.</p>
+      <p>TECHNICAL SKILLS: 
+        MERN Stack, Node.js, Express, JavaScript, jQuery, React.js, React Native, Java, Android, GIT, Github, MongoDB, MySQL, Firebase, HTML, CSS, Bootstrap, APIs, JSON, XML, REST, AJAX, Linux, Bash, the command line, computer science fundamentals</p>
 
     </section>
 
@@ -39,7 +39,7 @@
         <h2>Connect with Me</h2>
 
         <a href="https://github.com/Mark-Mikelonis"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/mark-mikelonis-bb18215/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://www.linkedin.com/in/mark-mikelonis/"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
         <a href="https://stackoverflow.com/users/5075208/thricethree"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
@@ -47,7 +47,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 2016 Mark Mikelonis
+      Copyright &copy; 2018 Mark Mikelonis
     </div>
   </footer>
 </body>
